update flash messages

--- a/app/locale/sv_SE/Lybe_Vatchecker.csv
+++ b/app/locale/sv_SE/Lybe_Vatchecker.csv
@@ -1,5 +1,5 @@
 "Loading...", "Laddas..."
-"VAT Number is Invalid", "Ogiltigt Vat nummer"
-"VAT Number is valid", "Godkänt Vat nummer"
-"Check your VAT","Bekräfta ditt VAT nummer"
-"VAT Number is empty", "VAT nummer är tom"
+"VAT Number is Invalid", "Ogiltigt momsregistreringsnummer"
+"VAT Number is valid", "Godkänt momsregistreringsnummer"
+"Check your VAT","Kontrollera"
+"VAT Number is empty", "Vänligen fyll i ditt momsregistreringsnummer"
